# SDL_libretro

./: .Doxyfile  .DoxygenLayout.xml  .Makefile  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  index.data  index.html  index.js  index.wasm  sdlarch.c
.github/workflows/: docs.yml  test.yml
cmake/: DownloadCores.cmake  EmscriptenConfig.cmake  FindPhysFS.cmake  FindSDL3.cmake  FindSDL_PhysFS.cmake  Minizip.cmake  SDL_libretroConfig.cmake.in  backup-FindSDL2.cmake
example/: SDL_libretro.js  SDL_libretro_basic.c  SDL_libretro_demo.c  SDL_libretro_demo.html  SDL_libretro_demo_web.js  SDL_libretro_embed.html  SDL_libretro_zip.c
examples/: CMakeLists.txt  SDL_libretro_example.c
include/: CMakeLists.txt  SDL_ini.h  SDL_libretro.h  SDL_libretro_audio.h  SDL_libretro_config.h  SDL_libretro_core.h  SDL_libretro_env.h  SDL_libretro_info.h  SDL_libretro_input.h  SDL_libretro_menu.h  SDL_libretro_messages.h  SDL_libretro_minizip.h  SDL_libretro_options.h  SDL_libretro_physfs.h  SDL_libretro_serialize.h  SDL_libretro_vfs.h  SDL_libretro_vfs_minizip.h  SDL_libretro_video.h  SDL_minizip.h
src/: SDL_libretro.c  SDL_libretro_audio.c  SDL_libretro_env.c  SDL_libretro_input.c  SDL_libretro_internal.h  SDL_libretro_options.c  SDL_libretro_serialize.c  SDL_libretro_video.c
test/: CMakeLists.txt  SDL_libretro_minizip_test.c  SDL_libretro_test.c  sdl_libretro_test.c  test_content.txt  test_core.c
test/consumer/: CMakeLists.txt  main.c
wasm/: fceumm_libretro.wasm
